fix(browser-extension): report dialog letter spacing in some sites

--- a/packages/browser-extension/src/styles/dialog.css
+++ b/packages/browser-extension/src/styles/dialog.css
@@ -13,6 +13,7 @@
   box-sizing: border-box;
   color: var(--cookie-dialog-monster-color-secondary);
   font-size: 100%;
+  letter-spacing: normal;
   margin: auto;
   padding: 0px;
   text-align: left;
